# beadhub

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  prd.md  pyproject.toml
.beads/: config.yaml  issues.jsonl  metadata.json
.claude/skills/release/: SKILL.md
.github/workflows/: aw-release.yml  docker-claude-agent.yml  docker-discord-bridge.yml  server-ci.yml  server-release.yml
agent-image/: Dockerfile  discord-status.sh  message-watcher.sh  oauth-refresh.sh
cli/: README.md
cli/go/: .gitignore  .goreleaser.yaml  AGENTS.md  Makefile  README.md  claims.go  client.go  console-onboarding.md  coordination.go  go.mod  go.sum  install.sh  policies.go  project_instructions.go  project_roles.go  projects.go  reservations.go  sot-delta.md  sot.md  tasks.go  tasks_test.go  util.go  workspaces.go
cli/go/awconfig/: context.go  context_test.go  global_config.go  global_config_test.go  lock_unix.go  lock_windows.go  selection.go  selection_test.go  workspace.go  workspace_test.go
cli/go/awid/: account.go  agent_log.go  agents.go  alias_prefix.go  atomic.go  auth.go  chat.go  claim_human.go  claim_human_test.go  client.go  client_test.go  client_tofu_degraded_test.go  contacts.go  contacts_test.go  control.go  control_test.go  create_project.go  create_project_test.go  deregister.go  didkey.go  didkey_test.go  event_source.go  events.go  init.go  (+28 more)
discord-bridge/: DEVELOPMENT.md  Dockerfile  package.json  tsconfig.json
discord-bridge/src/: beadhub-client.ts  config.ts  discord-listener.ts  discord-sender.ts  index.ts  orchestrator-relay.ts  redis-listener.ts  session-map.ts  types.ts
docs/: README.md  agent-guide.txt  agent-loop-sot.md  aw-run.md  bdh.md  cli-command-reference.md  configuration.md  contributing.md  coordination.md  deployment.md  development.md  getting-started.md  id-sot.md  mcp-tools-reference.md  messaging.md  protocol-overview.md  self-hosting-guide.md  server-api-reference.md  sot.md  workspaces.md
docs/specs/: auth-model.md  docker-reproducibility.md
frontend/: index.html
frontend/src/: App.tsx  index.css
history/: 2026-03-27-policy-role-rename-contract.md
scripts/: e2e-oss-user-journey.sh  seed_dashboard.py
scripts/git-hooks/: pre-push
server/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
server/docs/: identity-key-verification.md  self-hosting.md
server/docs/vectors/: README.md  identity-log-v1.json  message-signing-v1.json  rotation-announcements-v1.json  stable-id-v1.json
server/src/aweb/: access_modes.py  address_reachability.py  address_scope.py  alias_allocator.py  api.py  auth.py  aweb_context.py  aweb_introspection.py  bootstrap.py  claims.py  cli.py  client.py  config.py  db.py  db_config.py  deps.py  dns_verify.py  events.py  gc.py  hooks.py  input_validation.py  internal_auth.py  logging.py  mutation_hooks.py  names.py  namespace_registry.py  pagination.py  presence.py  projection.py  rate_limit.py  ratelimit.py  redis_client.py  role_name_compat.py  routing_utils.py  scope_agents.py  service_errors.py  sql.py  upstream.py  workspace_config.py
server/src/aweb/awid/: __init__.py  contract.py  custody.py  did.py  log.py  replacement.py  signing.py  stable_id.py
server/src/aweb/coordination/: __init__.py  defaults.py  project_registry.py  roles.py  tasks_service.py  workspace_registry.py
server/src/aweb/coordination/routes/: __init__.py  policies.py  project_instructions.py  project_roles.py  repos.py  tasks.py  workspaces.py
server/src/aweb/defaults/: project_instructions.md
server/src/aweb/defaults/invariants/: 01-tracking-aw-only.md  02-communication-mail-first.md  03-communication-chat.md  04-identity-no-impersonation.md  05-collaborate.md
server/src/aweb/defaults/roles/: backend.md  coordinator.md  developer.md  frontend.md  reviewer.md
server/src/aweb/mcp/: __init__.py  auth.py  server.py
server/src/aweb/mcp/tools/: agents.py  chat.py  contacts.py  identity.py  mail.py  policies.py  project_instructions.py  project_roles.py  tasks.py  workspace.py
server/src/aweb/messaging/: chat.py  contacts.py  messages.py  rotation.py  waiting.py
server/src/aweb/migrations/aweb/: 001_initial.sql  002_replacement_announcements.sql  005_project_roles_rename.sql
server/src/aweb/migrations/server/: 001_initial.sql  002_project_roles_rename.sql  002_restore_tenant_slug_uniqueness.sql  003_backfill_owner_ref.sql  003_project_instructions.sql  004_split_dashboard_workspace_types.sql
server/src/aweb/routes/: agents.py  auth.py  chat.py  claims.py  contacts.py  conversations.py  did.py  dns_addresses.py  dns_namespaces.py  events.py  init.py  messages.py  projects.py  reservations.py  scopes.py  status.py
server/tests/: test_active_work_summary.py  test_aweb_package_import.py  test_chat_pending.py  test_claim_focus_lifecycle.py  test_identity_conformance_vectors.py  test_init_wire_shape.py  test_mcp_project_instruction_tools.py  test_package_data.py  test_project_roles_bootstrap.py  test_project_roles_wire_shape.py  test_role_name_wire_shape.py
src/beadhub/: api.py  auth.py  aweb_context.py  aweb_introspection.py  claims.py  cli.py  db.py  events.py  internal_auth.py  mutation_hooks.py  notifications.py  presence.py  workspace_config.py
tests/: db_utils.py  test_agent_lifecycle.py  test_agent_status_guard.py  test_api_router_mounts.py  test_aweb_identity.py  test_beadhub_agents_auth.py  test_beads_upload.py  test_claims.py  test_custody_key.py  test_deregister_cascade.py  test_event_publishing.py  test_heartbeat.py  test_library_mode.py  test_lifespan_cleanup.py  test_mcp_agent_mail.py  test_mcp_discovery.py  test_mutation_hook_events.py  test_presence.py  test_sse_pubsub_reconnect.py  test_status.py  test_subscriptions.py  test_task_mutation_claims.py  test_tenant_isolation.py  test_unified_tasks.py  test_workspace_id.py
(+139 files in other folders)
