[project]
name = "beadhub"
version = "0.1.0"
description = "Real-time coordination layer for AI agent teams. File locking, messaging, escalations, and Beads integration."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Juan Reyero", email = "juan@juanreyero.com" }
]
requires-python = ">=3.12"
keywords = ["ai", "agents", "coordination", "beads", "mcp", "file-locking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi",
    "httpx",
    "uvicorn",
    "typer",
    "redis",
    "aiofiles>=25.1.0",
    "pyyaml>=6.0.3",
    "bcrypt>=5.0.0",
    "email-validator>=2.3.0",
    "pgdbm>=0.4.0",
    "aweb>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/beadhub/beadhub"
Documentation = "https://github.com/beadhub/beadhub#readme"
Repository = "https://github.com/beadhub/beadhub.git"
Issues = "https://github.com/beadhub/beadhub/issues"

[project.scripts]
beadhub = "beadhub:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "asgi-lifespan>=2.1.0",
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.17.0",
    "psycopg2-binary>=2.9.11",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.14.9",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["beadhub"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
files = ["src", "tests"]
follow_imports = "skip"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
no_implicit_optional = true
strict_equality = true
ignore_missing_imports = true
namespace_packages = true
show_error_codes = true
pretty = true
explicit_package_bases = true

exclude = [
    "frontend/",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
]
ignore = [
    "E501",  # line too long, handled by black
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["beadhub"]

[tool.pytest.ini_options]
markers = [
    "aweb_conformance: black-box conformance tests (skipped unless AWEB_CONFORMANCE=1)",
]
