[project]
name = "aweb"
version = "1.1.3"
description = "Agent Web: self-hostable coordination server for AI agents (identity, presence, mail, chat, tasks, locks)"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Juan Reyero", email = "juan@juanreyero.com" }
]
requires-python = ">=3.12"
keywords = ["ai", "agents", "coordination", "chat", "mail", "locks", "identity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "base58>=2.1.1",
    "cryptography>=45.0.6",
    "dnspython>=2.8.0",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "mcp>=1.26.0",
    "pgdbm>=0.4.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pynacl>=1.6.2",
    "pyyaml>=6.0.2",
    "redis>=6.4.0",
    "typer>=0.16.1",
    "uvicorn[standard]>=0.35.0",
]

[project.urls]
Homepage = "https://github.com/awebai/aweb"
Repository = "https://github.com/awebai/aweb"
Documentation = "https://github.com/awebai/aweb/tree/main/server/docs"
Issues = "https://github.com/awebai/aweb/issues"

[project.scripts]
aweb = "aweb.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aweb"]

[tool.hatch.build.targets.sdist]
exclude = [
    ".claude/",
    "AGENTS.md",
    "CLAUDE.md",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.2.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
